--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.27",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.high-definition": "14.0.8",
